--- a/src/styles/ads/ads.css
+++ b/src/styles/ads/ads.css
@@ -1,97 +1,69 @@
-.container-father{
-    padding-top: 5vh;
-    padding-bottom: 8vh;
-    padding-left: 10vh;
-    height: 100%;
-    width: 100%;
-}
-
-.titulo-subseccion{
-    font-size: 2vw;
-    padding-top: 3vh;
-    padding-bottom: 4vh;
-    color: black;
-
-}
-
-.texto-subseccion{
-    font-size: 2.4vh;
-    color: black;
-    padding-bottom: 4vh;
-}
-
-.servicios-lista {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.servicio {
-  position: relative;
-  width: 30vh;
-  background-color: #003366;
+.publicidad-section {
+  padding: 100px 20px 1vh;
   color: white;
-  padding: 20px;
-  border-radius: 2px;
-  height: 30vh;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  transition: all 0.3s ease;
+  text-align: center;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, white 50%), url('../../../public/back-deg.png');  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.circulo {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  background-color: #FF8C42;
-  border-radius:50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-  z-index: 1;
+.publicidad-contenedor {
+  max-width: 900px;
+  margin: 0 auto;
 }
 
-.servicio:hover .circulo {
-  top: 0%;
-  left: -5%;
-  height: 150%;
-  width: 150%;
-  z-index: 1;
+.publicidad-titulo {
+  font-size: 6vh;
+  margin-bottom: 25px;
+  color: #07273c;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  letter-spacing: 1.5px;
 }
 
-.circulo p {
-  display: none;
-  text-align: start;
-  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.23);
-  padding: 20px;
-  line-height: 3vh;
-  z-index: 10;
-  width: 30vh;
-  font-size: 1vw;
+
+.publicidad-texto {
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+  color: #000000;
+  line-height: 1.6;
+  display: inline-block;
+  padding-bottom: 10px;
 }
 
-.servicio:hover .circulo p {
-  display: block;
-  transform: translate(-18%, -30%);
-  letter-spacing: 0.08em;
-  font-weight: 600;
-  z-index: 10;
+.publicidad-boton {
+  background:#07273c;
+  color: #fff;
+  padding: 15px 35px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  transition: background-color 0.4s ease, box-shadow 0.4s ease;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.servicio h4 {
-
-  font-size: 1vw;
-  margin-bottom: 5vh;
-  max-width: 80%;
+.publicidad-boton:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada */
+  transform: translateY(-1vh); /* Eleva el botón al pasar el ratón */
+  color: #fff;
 }
 
-.servicio:hover h4 {
-    opacity: 0;
-    transition: all 0.3s ease-in-out;
+
+.publicidad-boton:active {
+  transform: scale(0.98);
+}
+
+/* QUERIES */
+@media screen and (max-width: 1300px){
+  .publicidad-section {
+    padding: 3vh 20px 1vh;
+  }
+
+  
+.publicidad-titulo {
+  font-size: 4vh;
+  margin-bottom: 25px;
+  color: #07273c;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  letter-spacing: 1.5px;
+}
 }
