--- a/src/styles/contact/contact.css
+++ b/src/styles/contact/contact.css
@@ -3,10 +3,18 @@
   width: 100%;
   padding-top: 5vh;
   padding-bottom: 2vh;
-  background-color: #003366;
+  background-color: #07273c;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.qr-escan{
+  padding: 0;
+  margin: 0;
+  width: auto;
+  height: 70vh;
+  margin-top: -8vh;
 }
 
 .contact-header {
@@ -32,12 +40,12 @@
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 3vh;
 }
 
 .form-group label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 2vh;
   font-weight: bold;
   color: white;
 }
@@ -79,3 +87,23 @@
   color: #dc3545; /* Rojo para error */
 }
   
+@media screen and (max-width: 1000px) {
+  #contact {
+    width: 100%;
+    padding-top: 5vh;
+    padding-bottom: 2vh;
+    background-color: #003366;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .contact-form {
+    width: 100%;
+    padding: 2vh 10vh;
+  }
+
+  .qr-escan{
+    display: none;
+  }
+}
