--- a/src/styles/footer/footer.css
+++ b/src/styles/footer/footer.css
@@ -1,14 +1,21 @@
 .footer {
-  background-color: #f9f9f9;
-  padding: 10vh;
+  padding: 5vh 0 0;
   text-align: center;
   height: 100%;
   bottom: 0;
 }
 
+.logo-vo{
+  margin: 0;
+  padding: 0;
+  height: 20vh;
+}
+
 .footer-content {
   max-width: 1200px;
   margin: 0 auto;
+  color: black;
+  font-weight: 500;
 }
 
 .footer nav ul {
@@ -22,7 +29,7 @@
 }
 
 .footer nav ul li a {
-  color: var(--color-secundario); /* Beige Dorado */
+  color: black;
   text-decoration: none;
 }
 
