--- a/src/styles/services/services.css
+++ b/src/styles/services/services.css
@@ -1,42 +1,98 @@
-.seccion-servicios {
-    margin: 0;
-    padding: 10vh;
-    background-color: #FF8C42;
+.container-father{
+    padding-top: 5vh;
+    padding-bottom: 8vh;
+    padding-left: 10vh;
+    height: 100%;
+    width: 100%;
 }
 
-.contenedor {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 20px;
+.titulo-subseccion{
+    font-size: 2vw;
+    padding-top: 3vh;
+    padding-bottom: 4vh;
+    color: #07273c;
+
 }
 
-.titulo-seccion {
-  font-size: 2.5em;
-  margin-bottom: 10vh;
-  text-align: start;
+.texto-subseccion{
+    font-size: 2.4vh;
+    padding-bottom: 4vh;
 }
 
-.intro-seccion {
-  font-size: 2vw;
-  margin-bottom: 5vh;
-  text-align: start;
+.servicios-lista {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
-.razones-lista {
-  list-style: none;
-  padding: 0;
-  margin-bottom: 40px;
-}
-
-.razones-lista li {
-  font-size: 1.1em;
-  margin-bottom: 5vh;
-  padding-left: 25px;
+.servicio {
   position: relative;
+  width: 30vh;
+  background-color: #07273c;
+  color: white;
+  padding: 20px;
+  border-radius: 2px;
+  height: 30vh;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: all 0.3s ease;
 }
 
-.razones-lista li::before {
-  content: '✔️';
+.circulo {
   position: absolute;
-  left: 0;
+  top: 60%;
+  left: 50%;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  background-color: #FF8C42;
+  border-radius:50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+  z-index: 1;
+}
+
+.servicio:hover .circulo {
+  top: 0%;
+  left: -5%;
+  height: 150%;
+  width: 150%;
+  z-index: 1;
+}
+
+.circulo p {
+  display: none;
+  text-align: start;
+  text-shadow: 2px 2px 4px rgba(25, 25, 25, 0.23);
+  padding: 20px;
+  line-height: 3vh;
+  z-index: 10;
+  width: 30vh;
+  font-weight: 700;
+  color: white;
+  font-size: 1vw;
+}
+
+.servicio:hover .circulo p {
+  display: block;
+  transform: translate(-18%, -30%);
+  letter-spacing: 0.08em;
+  font-weight: 600;
+  z-index: 10;
+}
+
+.servicio h4 {
+
+  font-size: 1vw;
+  margin-bottom: 5vh;
+  max-width: 80%;
+}
+
+.servicio:hover h4 {
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
 }
