--- a/src/components/Body/styles.module.css
+++ b/src/components/Body/styles.module.css
@@ -3,10 +3,10 @@
     width: 100%;
     height: 12vh;
     line-height: 70px;
-    color: white;
-    font-size: 6vw;
+    color: #07273c;
+    font-size: 6vh;
     font-weight: 700;
-    text-shadow: 2px 2px 4px #0033662a;
+    text-shadow: 4px 4px 8px #0808085d;
     letter-spacing: -0.000005em;
     margin-top: 5vh;
     will-change: transform, opacity;
@@ -29,12 +29,12 @@
   @media screen and (max-width: 1200px) {
     .trailsText{
       width: 100%;
+      color: white;
     }
   }
 
   @media screen and (max-width: 600px) {
     .trailsText{
-      margin-left: -5vh;
       width: 150%;
     }
   }
