--- a/src/styles/body/body.css
+++ b/src/styles/body/body.css
@@ -101,36 +101,27 @@
         justify-content: center;
     }
 
-    .left-side .container {
-        display: none;
-    }
-
     .right-side {
-        min-width: 100%;
         width: 100%;
     }
     
     .right-side .container-right {
-        padding: 4vh 0 0;
+        padding: 0;
         text-align: center;
         align-items: start;
     }
 
-    .right-side h1 {
-        font-size: 5vh;
-    }
-    
-    .right-side h2 {
-        font-size: 3vh;
-    }
-    
-    .container-btn-head{
-        margin-top: 6vh;
-    }
-    
-    .right-side button {
-        font-size: 2vh;
-        padding: 1.4vh 3.8vh;
+    .left-side .container {
+        margin-top: 10vh;
+        align-items: center;
+        align-content: center;
     }
 }
 
+@media screen and (max-width: 800px) {
+
+    .right-side {
+        display: none;
+    }
+
+}
