--- a/src/components/Body/styles.module.css
+++ b/src/components/Body/styles.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 12vh;
     line-height: 70px;
-    color: #07273c;
+    color: #111;
     font-size: 6vh;
     font-weight: 700;
     text-shadow: 4px 4px 8px #0808085d;
@@ -29,7 +29,6 @@
   @media screen and (max-width: 1200px) {
     .trailsText{
       width: 100%;
-      color: white;
     }
   }
 
