--- a/src/styles/ads/anuncio.css
+++ b/src/styles/ads/anuncio.css
@@ -1,10 +1,7 @@
 .publicidad-section {
-  padding: 2vh 2vh 1vh;
-  color: white;
+  padding: 2vh 2vh 4vh;
+  background-color:#33C1FF;
   text-align: center;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, white 50%), url('../../../public/back-deg.png');  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .publicidad-contenedor {
@@ -15,7 +12,7 @@
 .publicidad-titulo {
   font-size: 6vh;
   margin-bottom: 25px;
-  color: #07273c;
+  color: white;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   letter-spacing: 1.5px;
 }
@@ -23,7 +20,7 @@
 
 .publicidad-texto {
   font-size: 2.5vh;
-  color: rgb(40, 40, 40);
+  color: white;
   margin-bottom: 30px;
   line-height: 1.6;
   display: inline-block;
