--- a/src/styles/navbar/nav.css
+++ b/src/styles/navbar/nav.css
@@ -3,6 +3,7 @@
     padding: 0 20px;
     position: fixed;
     width: 100%;
+    background: rgba(255, 255, 255, 0.9);
     top: 0;
     left: 0;
     z-index: 1000;
@@ -39,7 +40,7 @@
   }
   
   .navbar-logo {
-    color:  #003366;
+    color:  #FF8C42;
     font-size: 2.5vh;
     font-weight: bold;
     text-shadow: 2px 2px 4px #0033663b;
