--- a/src/styles/services/services.css
+++ b/src/styles/services/services.css
@@ -1,8 +1,6 @@
 .container-father{
-    padding: 5vh 10vh 8vh;
-    padding-top: 5vh;
-    padding-bottom: 8vh;
-    padding-left: auto;
+    padding: 2vh 10vh 5vh;
+    margin: 8vh auto;
     height: 100%;
     width: 100%;
 }
@@ -13,8 +11,7 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20px;
-  margin: 5vh 0;
+  gap: 5vh;
 }
 
 .titulo-subseccion{
